--- a/BigFileReader/Form1.resx
+++ b/BigFileReader/Form1.resx
@@ -247,7 +247,7 @@
     <value>1</value>
   </data>
   <data name="button4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 45</value>
+    <value>13, 68</value>
   </data>
   <data name="button4.Size" type="System.Drawing.Size, System.Drawing">
     <value>128, 23</value>
@@ -268,7 +268,7 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;button4.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="searchBox.Location" type="System.Drawing.Point, System.Drawing">
     <value>13, 19</value>
@@ -289,13 +289,43 @@
     <value>groupBox1</value>
   </data>
   <data name="&gt;&gt;searchBox.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="searchChbox.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="searchChbox.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 7.25pt</value>
+  </data>
+  <data name="searchChbox.Location" type="System.Drawing.Point, System.Drawing">
+    <value>13, 45</value>
+  </data>
+  <data name="searchChbox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>153, 17</value>
+  </data>
+  <data name="searchChbox.TabIndex" type="System.Int32, mscorlib">
+    <value>7</value>
+  </data>
+  <data name="searchChbox.Text" xml:space="preserve">
+    <value>przeszukaj wszystkie strony</value>
+  </data>
+  <data name="&gt;&gt;searchChbox.Name" xml:space="preserve">
+    <value>searchChbox</value>
+  </data>
+  <data name="&gt;&gt;searchChbox.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;searchChbox.Parent" xml:space="preserve">
+    <value>groupBox1</value>
+  </data>
+  <data name="&gt;&gt;searchChbox.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <data name="groupBox1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 579</value>
+    <value>3, 579</value>
   </data>
   <data name="groupBox1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>151, 80</value>
+    <value>175, 106</value>
   </data>
   <data name="groupBox1.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
